[package]
name = "escape_from_delta"
version = "0.1.0"
description = "Escape from Delta on-chain raid game"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "escape_from_delta"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
session-keys = { version = "3.0.11", features = ["no-entrypoint"] }
